samples/_failures_safe/1761334282_95e359_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c38a425e.c: In function ‘print_token’:
./samples/SAFE/__tmp_c38a425e.c:168: error: expected ‘{’ at end of input
